test/classes/io/halt-in-parent-class-io.good
halt-in-parent-class-io.chpl:3: error: halt reached - halt
